--- a/homework-03.ipynb
+++ b/homework-03.ipynb
@@ -151,7 +151,7 @@
     }
    },
    "source": [
-    "**6. (2 балла)** Обучите AdaBoostClassifier и GradientBoostingClassifier из sklearn. Опишите подробно, в чем заключается разница этих моделей. Подберите подходящее количество деревьев и проанализируйте метрики, с которыми мы работали выше."
+    "**6. (2 балла)** Обучите HistGradientBoostingClassifier и GradientBoostingClassifier из sklearn. Опишите подробно, в чем заключается разница этих моделей. Подберите подходящее количество деревьев и проанализируйте метрики, с которыми мы работали выше."
    ]
   },
   {
